[project]
name = "comfyui-trollsuite"
description = "Nodes: BinaryImageMask, ImagePadding, LoadLastCreatedImage, RandomMask, TransparentImage."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/oyvindg/ComfyUI-TrollSuite"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-TrollSuite"
Icon = ""
